overflow fix

--- a/impact-deck-style.css
+++ b/impact-deck-style.css
@@ -58,7 +58,7 @@
 }
 @media only screen and (max-width: 411px) {
     .title {
-        font-size:20px;
+        font-size: 32px;
     }
 }
 
@@ -87,11 +87,11 @@
 .subtitle-blue-rectangle {
     font-family: 'source sans pro';
     position: relative;
-    left: 146px;
+    padding-left: 130px;
     bottom: 75px;
     font-weight: bold;
     /* font-size: 32px; */
-    line-height: 29px;
+    line-height: 22px;
     display: flex;
     align-items: center;
     color: #004B85;
